# SPDX-FileCopyrightText: 2023 Davidson <twister@davidson.fr>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "etsdiff"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-error = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
itertools = "0.8"
fs_extra = "1.2.0"
clap = { version = "3.0", features = ["derive"] }
rtshark = "2.3.1"
cgroups-rs = "0.2.11"
sysinfo = "0.3.19"
inotify = "0.10"
streaming-stats = "0.2.3"
systemctl = "0.1.9"
toml = "0.7.2"

[dev-dependencies]
rouille = "3.5.0"
reqwest = { version = "0.11", features = ["blocking"] }
